# build_buffyboard

.github/workflows/: c-cpp.yml
buffyboard/: README.md  arm64.txt  buffyboard.conf  buffyboard.h  command_line.c  command_line.h  config.c  config.h  lv_conf.h  main.c  meson.build  package-lock.json  package.json  regenerate-layouts.sh  regenerate-screenshots.sh  sq2lv_layouts.c  sq2lv_layouts.h  terminal.c  terminal.h  uinput_device.c  uinput_device.h
buffyboard/debian/: changelog  control  copyright  install  rules
buffyboard/screenshots/: README.md
